--- a/popup.html
+++ b/popup.html
@@ -36,8 +36,11 @@
 
   <div id="break-time" class="page hidden">
     <h1>Break Time!</h1>
+    <p>Time remaining: <span id="break-time-left">5:00</span></p>
     <p>Would you like to play a game?</p>
-    <iframe src="rps/rps.html" width="100%" height="300px" style="border: none;"></iframe>
+    <div class="game-container">
+      <iframe src="games/games.html" frameborder="0"></iframe>
+    </div>
   </div>
 
   <script src="popup.js"></script>
