--- a/popup.html
+++ b/popup.html
@@ -48,6 +48,9 @@
     <p class="description">Take control of your work rhythm with smart breaks, mindful reminders, and fun mini-games. 
       Your productivity companion that keeps you refreshed and focused.</p>
   </footer>
+  <button class="resumer" onclick="window.location.href='mailto:owusuomaribright@gmail.com?subject=Hello&body=Hi,%20I%20want%20to%20work%20with%20you.'">
+    Contact Creator
+  </button>
   <script src="popup.js"></script>
 </body>
 </html>
