--- a/popup.html
+++ b/popup.html
@@ -42,6 +42,18 @@
       <iframe src="games/games.html" frameborder="0"></iframe>
     </div>
   </div>
+  <footer>
+    <p>© 2024 Break Timer | A mindful productivity tool to help you maintain a healthy work-rest balance. 
+      Built with ❤️ for better work habits.</p>
+    <p class="description">Take control of your work rhythm with smart breaks, mindful reminders, and fun mini-games. 
+      Your productivity companion that keeps you refreshed and focused.</p>
+  </footer>
+  <a href="mailto:owusuomaribright@gmail.com">
+    <button class="resumer">
+      Contact Creator
+    </button>
+  </a>
+
   <script src="popup.js"></script>
 </body>
 </html>
