--- a/popup.html
+++ b/popup.html
@@ -43,10 +43,7 @@
     </div>
   </div>
   <footer>
-    <p>© 2024 Break Timer | A mindful productivity tool to help you maintain a healthy work-rest balance. 
-      Built with ❤️ for better work habits.</p>
-    <p class="description">Take control of your work rhythm with smart breaks, mindful reminders, and fun mini-games. 
-      Your productivity companion that keeps you refreshed and focused.</p>
+    <p>© 2024 Break Timer | Built with ❤️</p>
   </footer>
   <a href="mailto:owusuomaribright@gmail.com">
     <button class="resumer">
