--- a/src/pages/popup/popup.html
+++ b/src/pages/popup/popup.html
@@ -5,13 +5,46 @@
   <link rel="stylesheet" href="../../pages/popup/popup.css">
 </head>
 <body>
-  <!-- Input Page -->
+  <div id="todo-list" class="hidden" style="
+    position: fixed;
+    top: 10;
+    left: 10;
+    width: 80%;
+    height: 80%;
+    background: white;
+    z-index: 999;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  ">
+    <div id="todo-container" style="text-align: center;">
+      <h2 style="text-align: center; text-decoration: underline;">Add a Task</h2>
+      <div id="task-input-container">
+        <input type="text" id="task-input" placeholder="Enter a new task">
+        <button id="add-task" style="background-color: #077799; border-radius: 5px; margin-top: 10px; color: white;">
+          Add</button>
+      </div>
+      <div id="tasks-list">
+      </div>
+    </div>
+  </div>
+
+  <button id="todo-toggle" style="
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    padding: 8px;
+    background: rgba(76, 175, 80, 0.3);
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: opacity 0.3s;
+    z-index: 1000;">&#128498</button>
   <div id="inputPage" class="page">
     <div class="container">
       <div class="flex flex-col items-center gap-4">
         <h1 class="text-2xl">PomoDoro Timer</h1>
         
-        <!-- Work Timer Input -->
         <div class="timer-label">Work Timer</div>
         <div class="input-container">
           <div class="flex flex-col items-center">
@@ -22,7 +55,6 @@
           </div>
         </div>
 
-        <!-- Break Timer Input -->
         <div class="timer-label">Break Timer</div>
         <div class="input-container">
           <div class="flex flex-col items-center">
@@ -40,7 +72,6 @@
     </div>
   </div>
 
-  <!-- Timer Page -->
   <div id="timerPage" class="page hidden">
     <div class="minimize-toggle">
       <button id="toggleView" class="toggle-btn" aria-label="Toggle view">
@@ -80,7 +111,6 @@
     </div>
   </div>
 
-  <!-- Break Choice Page -->
   <div id="breakChoicePage" class="page hidden">
     <div class="container">
       <div class="flex flex-col items-center gap-4">
@@ -89,7 +119,6 @@
           <button id="startBreak" class="btn btn-primary">Start Break</button>
           <button id="resetWork" class="btn btn-secondary">Reset Work Timer</button>
         </div>
-        <!-- Play Games button appears only in break mode -->
         <div id="gamesButtonContainer" style="text-align: center; margin-top: 20px;">
           <button id="openGamesButton" class="btn btn-primary">Play Games</button>
         </div>
