--- a/src/pages/popup/popup.html
+++ b/src/pages/popup/popup.html
@@ -39,7 +39,7 @@
     border-radius: 4px;
     cursor: pointer;
     transition: opacity 0.3s;
-    z-index: 1000;">&#128498</button>
+    z-index: 1000;">+</button>
   <div id="inputPage" class="page">
     <div class="container">
       <div class="flex flex-col items-center gap-4">
