--- a/src/pages/popup/popup.html
+++ b/src/pages/popup/popup.html
@@ -18,7 +18,8 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   ">
     <div id="todo-container" style="text-align: center;">
-      <h2 style="text-align: center; text-decoration: underline;">Add a Task</h2>
+      <h2 style="text-align: center; font-family: 'Poppins', sans-serif;font-size: 20px;
+       text-decoration: underline;">ADD A TASK</h2>
       <div id="task-input-container">
         <input type="text" id="task-input" placeholder="Enter a new task">
         <button id="add-task" style="background-color: #077799; border-radius: 5px; margin-top: 10px; color: white;">
