--- a/src/games/games.html
+++ b/src/games/games.html
@@ -4,69 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Games Home</title>
-    <style>
-      /* Global styles for the games homepage */
-      body {
-        margin: 0;
-        padding: 0;
-        font-family: sans-serif;
-        background-color: #f0f0f0;
-      }
-      .container {
-        max-width: 800px;
-        margin: 60px auto 0;
-        padding: 2rem;
-      }
-      h1 {
-        text-align: center;
-        margin-bottom: 2rem;
-      }
-      #breakTimerBar {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        background: #2c3e50;
-        color: #ecf0f1;
-        padding: 15px;
-        text-align: center;
-        font-size: 1.2em;
-        font-weight: bold;
-        z-index: 1000;
-        box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-      }
-      .game-list {
-        list-style: none;
-        padding: 0;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 20px;
-      }
-      .game-item {
-        text-align: center;
-      }
-      .game-item button {
-        width: 100%;
-        padding: 15px 0;
-        font-size: 1em;
-        font-family: 'Press Start 2P', cursive;
-        background: #e94560;
-        border: none;
-        color: white;
-        cursor: pointer;
-        border-radius: 8px;
-        transition: all 0.3s ease;
-        text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
-        box-shadow: 0 5px 15px rgba(233, 69, 96, 0.4);
-      }
-      .game-item button:hover {
-        transform: translateY(-2px);
-        background: #ff4d79;
-      }
-      .iframe-container {
-        margin-top: 2rem;
-      }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="games.css">
   </head>
   <body>
     <div id="breakTimerBar">Break Timer: 00:00</div>
@@ -84,6 +25,9 @@
         </li>
         <li class="game-item">
           <button data-game="rps/rock.html">Rock Paper Scissors</button>
+        </li>
+        <li class="game-item">
+          <button data-game="memory/memory.html">Memory Cards</button>
         </li>
       </ul>
       <div class="iframe-container">
