added a whack a mole game to games

--- a/src/games/games.html
+++ b/src/games/games.html
@@ -29,6 +29,9 @@
         <li class="game-item">
           <button data-game="memory/memory.html">Memory Cards</button>
         </li>
+        <li class="game-item">
+          <button data-game="whack/whack.html">Whack-a-Mole</button>
+        </li>
       </ul>
       <div class="iframe-container">
         <iframe id="gameFrame" src="" style="width: 100%; height: calc(100vh - 100px); border: none;"></iframe>
