--- a/src/pages/popup/popup.html
+++ b/src/pages/popup/popup.html
@@ -110,6 +110,13 @@
             </div>
           </div>
 
+          <div class="toggle-container">
+            <label class="toggle-label">
+              <input type="checkbox" id="floatingIconToggle">
+              <span>Show Floating Icon</span>
+            </label>
+          </div>
+
           <div class="button-container">
             <button id="startTimer" class="btn btn-primary">Start</button>
           </div>
