Enhance popup UI styles and update section titles
Improved the appearance of the add-task button and todo-title with new gradients, shadows, and interactive effects in popup.css. Updated section titles in popup.html

--- a/src/pages/popup/popup.html
+++ b/src/pages/popup/popup.html
@@ -21,7 +21,7 @@
 
     <div id="todo-list" class="todo-list-panel">
       <div id="todo-container">
-        <h2 class="todo-title">TASKS</h2>
+        <h2 class="todo-title">What's for today??</h2>
       <div id="task-input-container">
         <input type="text" id="task-input" placeholder="Enter a new task">
           <button id="add-task">Add</button>
@@ -43,7 +43,7 @@
     <div id="stats-panel" class="stats-panel">
       <div class="stats-container">
         <div class="stats-header">
-          <h2>Work Statistics</h2>
+          <h2>Motion Report</h2>
           <button id="close-stats" class="close-stats">&times;</button>
         </div>
         <div class="stats-content">
