Update stats labels

--- a/src/pages/popup/popup.html
+++ b/src/pages/popup/popup.html
@@ -56,11 +56,11 @@
             <div id="stat-tasks-completed" class="stat-value">0</div>
           </div>
           <div class="stat-item">
-            <div class="stat-label">Total Work Time</div>
+            <div class="stat-label">Work time completed</div>
             <div id="stat-work-time" class="stat-value">00:00:00</div>
           </div>
           <div class="stat-item">
-            <div class="stat-label">Total Break Time</div>
+            <div class="stat-label">Break Times Taken</div>
             <div id="stat-break-time" class="stat-value">00:00:00</div>
           </div>
           <div class="stat-item">
