--- a/src/pages/popup/popup.html
+++ b/src/pages/popup/popup.html
@@ -56,7 +56,7 @@
             <div id="stat-tasks-completed" class="stat-value">0</div>
           </div>
           <div class="stat-item">
-            <div class="stat-label">Work time completed</div>
+            <div class="stat-label">Work time Completed</div>
             <div id="stat-work-time" class="stat-value">00:00:00</div>
           </div>
           <div class="stat-item">
